Add tasks information
